// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display claw 1`] = `
Array [
  <div
    className="display-property"
  >
    <span>
      elemental damage
    </span>
    : 
    <span
      className="value cold_damage"
    >
      10-13
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      chaos damage
    </span>
    : 
    <span
      className="value chaos_damage"
    >
      500-600
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      critical strike chance
    </span>
    : 
    <span
      className="value augmented"
    >
      7.50%
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      attacks per second
    </span>
    : 
    <span
      className="value default"
    >
      1.33%
    </span>
  </div>,
]
`;

exports[`should display dagger 1`] = `
Array [
  <div
    className="display-property"
  >
    <span>
      quality
    </span>
    : 
    <span
      className="value augmented"
    >
      5%
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      physical damage
    </span>
    : 
    <span
      className="value augmented"
    >
      6
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      elemental damage
    </span>
    : 
    <span
      className="value cold_damage"
    >
      10-13
    </span>
    , 
    <span
      className="value fire_damage"
    >
      4
    </span>
    , 
    <span
      className="value lightning_damage"
    >
      1-400
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      critical strike chance
    </span>
    : 
    <span
      className="value augmented"
    >
      7.50%
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      attacks per second
    </span>
    : 
    <span
      className="value default"
    >
      1.33%
    </span>
  </div>,
]
`;

exports[`should display sacrifical garb 1`] = `
Array [
  <div
    className="display-property"
  >
    <span>
      quality
    </span>
    : 
    <span
      className="value augmented"
    >
      5%
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      armour
    </span>
    : 
    <span
      className="value augmented"
    >
      100
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      energy shield
    </span>
    : 
    <span
      className="value augmented"
    >
      10
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      evasion
    </span>
    : 
    <span
      className="value augmented"
    >
      50
    </span>
  </div>,
]
`;

exports[`should display shields 1`] = `
Array [
  <div
    className="display-property"
  >
    <span>
      armour
    </span>
    : 
    <span
      className="value default"
    >
      1
    </span>
  </div>,
  <div
    className="display-property"
  >
    <span>
      chance to block
    </span>
    : 
    <span
      className="value default"
    >
      3%
    </span>
  </div>,
]
`;
